--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,12 @@ body {
   margin: 0;
   display: flex;
   width: 100vw;
-  min-width: 320px;
+
   min-height: 100vh;
+  background-color: #ccc;
+  color: black;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 @media (prefers-color-scheme: light) {
