--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
   width: 100vw;
 
   min-height: 100vh;
-  background: url("../public/images/mac-background.jpeg");
+  background: url("../public/mac-background.jpeg");
   color: black;
   overflow-x: hidden;
   overflow-y: hidden;
